--- a/_config.yml
+++ b/_config.yml
@@ -132,7 +132,7 @@ bing_site_verification: # out your bing-site-verification ID (Bing Webmaster)
 # -----------------------------------------------------------------------------
 
 blog_name: My Tech Trail # blog_name will be displayed in your blog page
-blog_description: A space for curious minds in the world of tech — thoughts, experiments, and everything in between.
+blog_description: A space for curious minds in the world of tech — thoughts, experiments, and everything in between!
 permalink: /blog/:year/:title/
 lsi: false # produce an index for related posts
 
@@ -194,7 +194,7 @@ collections:
     output: true
     permalink: /:collection/:title/
   projects:
-    output: true
+    output: false
     permalink: /:collection/:title/
 
 announcements:
